--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,7 +55,13 @@ flutter {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-core:16.0.1'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.10.0'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
