--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  google_sign_in: ^4.0.1+3
+  firebase_auth: ^0.10.0+1
+  cloud_firestore: ^0.11.0+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
