--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   google_sign_in: ^4.0.1+3
   firebase_auth: ^0.10.0+1
   cloud_firestore: ^0.11.0+1
+  firebase_storage: ^3.0.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -41,8 +43,18 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  fonts:
+  - family: Billabong
+    fonts:
+    - asset: assets/fonts/Billabong.ttf
+  - family: Bangers
+    fonts:
+    - asset: assets/fonts/Bangers.ttf
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+  - assets/google_icon.jpg
+
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
