--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="flutter_me_up"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDm08FYRK9Z6ZMe8nH35c2UXgGTsM72L0A" />
+
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -25,6 +30,8 @@
                  until Flutter renders its first frame. It can be removed if
                  there is no splash screen (such as the default splash screen
                  defined in @style/LaunchTheme). -->
+
+
             <meta-data
                 android:name="io.flutter.app.android.SplashScreenUntilFirstFrame"
                 android:value="true" />
