--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,13 @@ dependencies:
   cloud_firestore: ^0.11.0+1
   firebase_storage: ^3.0.0
   geolocator: ^5.0.0
+  cached_network_image: ^0.8.0
+  flare_flutter:
+    git:
+      url: https://github.com/2d-inc/Flare-Flutter.git
+      path: flare_flutter
+      ref: dev
+  google_maps_flutter: ^0.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,6 +62,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/google_icon.jpg
+  - assets/flutter_logo.png
+  - flare_animations/
 
   # assets:
   #  - images/a_dot_burr.jpeg
